src/test/resources/parse/reject/intConstantTooLarge.ul
boolean bar ()
{
    500545464654644;
}
